Fixed map icons not showing

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,6 @@
 }
 
 .thumbnail:hover {
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(255, 255, 255);
   cursor: pointer;
 }
